--- a/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
@@ -11,13 +11,13 @@
   </div>
   <div class="__fees">
     {{'minimum_fee' | i18n}}:&nbsp;
-    <em (click)="feeNQT=convertFeeToBurst(fees.minimum)">{{ convertFeeToBurst(fees.minimum) }}</em>
+    <em (click)="feeNQT=convertFeeToBurst(fees.minimum)">{{ convertFeeToBurst(fees.minimum) | burstAmount }}</em>
     {{'cheap_fee' | i18n}}:&nbsp;
-    <em (click)="feeNQT=convertFeeToBurst(fees.cheap)">{{ convertFeeToBurst(fees.cheap) }}</em>
+    <em (click)="feeNQT=convertFeeToBurst(fees.cheap)">{{ convertFeeToBurst(fees.cheap) | burstAmount }}</em>
     {{'standard_fee' | i18n}}:&nbsp;
-    <em (click)="feeNQT=convertFeeToBurst(fees.standard)">{{ convertFeeToBurst(fees.standard) }}</em>
+    <em (click)="feeNQT=convertFeeToBurst(fees.standard)">{{ convertFeeToBurst(fees.standard) | burstAmount }}</em>
     {{'priority_fee' | i18n}}:&nbsp;
-    <em (click)="feeNQT=convertFeeToBurst(fees.priority)">{{ convertFeeToBurst(fees.priority) }}</em>
+    <em (click)="feeNQT=convertFeeToBurst(fees.priority)">{{ convertFeeToBurst(fees.priority)  | burstAmount }}</em>
   </div>
 </div>
 
