--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.scss
@@ -18,12 +18,12 @@
     }
 
     .all-icon {
-      margin-left: 10px;
-      padding-top: 5px;
+      //margin-left: 10px;
+      //padding-top: 5px;
       font-size: 1.25em;
       font-weight: 700;
       color: #666;
-      display: inline-block;
+      //display: inline-block;
       cursor: pointer;
     }
 
