--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -49,7 +49,7 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       <div [ngClass]="{fg_green: !isAmountNegative(transaction), fg_red: isAmountNegative(transaction)}">
-        {{getAmount(transaction) | number: "1.0-4":this.locale }}
+        {{getAmount(transaction) | burstAmount:'short' }}
       </div>
     </mat-cell>
   </ng-container>
@@ -60,7 +60,7 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       {{
-      convertNQTStringToNumber(transaction.feeNQT) | number: "1.0-4":this.locale
+      convertNQTStringToNumber(transaction.feeNQT) | burstAmount:'short'
       }}
     </mat-cell>
   </ng-container>
