chore:Fixed failing ng tests

--- a/web/angular-wallet/src/app/main/dashboard/market/market-overview.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/market/market-overview.component.html
@@ -52,10 +52,10 @@
         </h3>
         <div fxLayout="row" fxLayoutAlign="start end">
           <span>
-            {{getAvailableSupply()}}
+            {{getAvailableSupply() | burstAmount}}
           </span>
           <span class="font-size-10">
-            ({{getRelativeSupply()}})
+            &nbsp;({{getRelativeSupply()}})
           </span>
         </div>
       </div>
