chore: More cleanups

--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-2/style-2.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-2/style-2.component.html
@@ -2,7 +2,7 @@
 
     <div class="logo">
         <img class="logo-icon" src="assets/images/logos/icon_white.png">
-        <span class="logo-text">BURST</span>
+        <span class="logo-text">Burst</span>
     </div>
 
     <button mat-icon-button class="toggle-sidebar-folded"
