--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
@@ -73,7 +73,7 @@
     <div class="chip-list">
       <span *ngFor="let payment of value.data.recipients" class="chip">
         <a [routerLink]="['/account', payment[0]]">{{convertNumericIdToAddress(payment[0])}}
-          ({{convertNQTStringToNumber(payment[1])}} BURST)</a>
+          ({{convertNQTStringToNumber(payment[1]) | burstAmount}})</a>
       </span>
     </div>
   </div>
