--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -49,7 +49,7 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       <div [ngClass]="{fg_green: !isAmountNegative(transaction), fg_red: isAmountNegative(transaction)}">
-        {{getAmount(transaction) | burstAmount:'short' }}
+        {{getAmount(transaction) | burstAmount:'burst':true}}
       </div>
     </mat-cell>
   </ng-container>
@@ -59,9 +59,7 @@
       <mat-icon>compare_arrows</mat-icon>&nbsp;{{ "fee" | i18n }}
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
-      {{
-      convertNQTStringToNumber(transaction.feeNQT) | burstAmount:'short'
-      }}
+      {{transaction.feeNQT | burstAmount:'planck':true}}
     </mat-cell>
   </ng-container>
 
