--- a/web/angular-wallet/src/app/main/accounts/accounts.component.html
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.html
@@ -96,7 +96,7 @@
           {{'balance' | i18n }}
         </mat-header-cell>
         <mat-cell
-          *matCellDef="let account">{{account.balanceNQT | burstAmount: 'planck':'short' }}</mat-cell>
+          *matCellDef="let account">{{account.balanceNQT | burstAmount: 'planck':true }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="description">
