--- a/web/angular-wallet/src/app/main/dashboard/performance/performance.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/performance/performance.component.html
@@ -8,23 +8,26 @@
 <ng-container *ngIf="!isLoading">
   <div class="performance">
     <section class="sparkline">
-      <small>{{'price_chart_7d' | i18n}}</small>
-      <img matTooltip="{{'price_chart_7d' | i18n}}" class="w-80-p" alt="sparkline"
+      <small class="label">{{'price_chart_7d' | i18n}}</small>
+      <img matTooltip="{{'price_chart_7d' | i18n}}" alt="Burst Sparkline"
            src="https://s2.coinmarketcap.com/generated/sparklines/web/7d/usd/573.png">
     </section>
     <section class="fcas">
-      <small class="label mb-8">Asset Score</small>
-      <mat-chip-list>
-        <mat-chip matTooltip="Fundamental Crypto Asset Score (FCAS)" [style.background-color]="getRankingColor()"
-                  matChipTrailingIcon
-                  (click)="openCMCRating()"
-        >
-          <h1>{{fcasData.grade}}</h1>
-          <small class="fcas-point">{{fcasData.point_change}}</small>
-          <mat-icon *ngIf="fcasData.point_change>=0">arrow_drop_up</mat-icon>
-          <mat-icon *ngIf="fcasData.point_change<0">arrow_drop_down</mat-icon>
-        </mat-chip>
-      </mat-chip-list>
+      <small class="label">Asset Score</small>
+      <div class="fcas-body">
+        <mat-chip-list class="mr-16">
+          <mat-chip matTooltip="Fundamental Crypto Asset Score (FCAS)" [style.background-color]="getRankingColor()"
+                    matChipTrailingIcon
+                    (click)="openCMCRating()"
+          >
+            <h1>{{fcasData.grade}}</h1>
+            <small class="fcas-point">{{fcasData.point_change}}</small>
+            <mat-icon *ngIf="fcasData.point_change>=0">arrow_drop_up</mat-icon>
+            <mat-icon *ngIf="fcasData.point_change<0">arrow_drop_down</mat-icon>
+          </mat-chip>
+        </mat-chip-list>
+        <h2>{{fcasData.value}}<small>/1000</small></h2>
+      </div>
     </section>
   </div>
 </ng-container>
