feat: Added activation message

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -8,6 +8,17 @@
 
   <div class="body">
     <mat-grid-list [cols]="gridAttributes.columnCount" rowHeight="32px">
+      <mat-grid-tile
+        *ngIf="!account.confirmed && account.balanceNQT"
+        [colspan]="gridAttributes.columnCount"
+        [rowspan]="gridAttributes.rowSpans.warning">
+        <div class="activation-message">
+          <mat-icon>warning</mat-icon>
+          <span>{{ 'no_public_key_warning' | i18n }}</span>
+          <button class="activate" mat-raised-button (click)="activateAccount()"
+                  disabled="{{isActivating}}">{{'activate' | i18n}}</button>
+        </div>
+      </mat-grid-tile>
       <mat-grid-tile [colspan]="gridAttributes.columnSpans.table" rowspan="21">
         <div class="fuse-card auto-width mr-8">
           <div class="h3 secondary-text mb-8">{{ 'recent_transactions' | i18n }}</div>
@@ -29,25 +40,16 @@
       </mat-grid-tile>
       <mat-grid-tile [colspan]="gridAttributes.columnSpans.performance" rowspan="9">
         <div class="fuse-card ml-8">
-            <div class="h3 secondary-text mb-8">Coin Performance</div>
-            <app-performance></app-performance>
+          <div class="h3 secondary-text mb-8">Coin Performance</div>
+          <app-performance></app-performance>
         </div>
       </mat-grid-tile>
       <mat-grid-tile [colspan]="gridAttributes.columnSpans.market" rowspan="10">
         <div class="fuse-card ml-8">
-            <div class="h3 secondary-text ">{{ 'market_info' | i18n }}</div>
-            <app-market-overview></app-market-overview>
+          <div class="h3 secondary-text ">{{ 'market_info' | i18n }}</div>
+          <app-market-overview></app-market-overview>
         </div>
       </mat-grid-tile>
     </mat-grid-list>
-
-    <!--    <div class="mr-lg-32" fxFlex="100" *ngIf="account">-->
-    <!--      <mat-toolbar-row class="warning" *ngIf="!account.confirmed && account.balanceNQT">-->
-    <!--        <mat-icon>warning</mat-icon>-->
-    <!--        <span>{{ 'no_public_key_warning' | i18n }}</span>-->
-    <!--        <button class="activate" mat-raised-button (click)="activateAccount()"-->
-    <!--                disabled="{{isActivating}}">{{'activate' | i18n}}</button>-->
-    <!--      </mat-toolbar-row>-->
-    <!--    </div>-->
   </div>
 </div>
