--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.scss
@@ -1,15 +1,10 @@
 @import "src/@fuse/scss/fuse";
 
 #dashboard {
-
-  //.main-widget {
-  //  display: flex;
-  //  flex-direction: column;
-  //}
   .fuse-card {
     max-width: none !important;
     width: 100%;
-    margin: 16px;
+    margin: 8px;
     padding: 16px;
   }
 
@@ -17,103 +12,33 @@
     width: 100%;
     height: 100%;
 
-    .mat-figure{
+    .mat-figure {
       align-items: normal;
     }
-    //display: flex;
-    //flex: 1 1 auto;
-    //padding: 32px;
-    //min-width: 0;
 
-    //@include media-breakpoint('lt-lg') {
-    //  flex-direction: column;
-    //}
-    //
-    //.left {
-    //  display: flex;
-    //  flex-direction: column;
-    //  flex: 1 1 auto;
-    //  min-width: 0;
-    //
-    //  .widget {
-    //    flex: 1 1 auto;
-    //    min-width: 0;
-    //  }
+    mat-grid-list {
+      height: 100%;
     }
-  //
-  //  .right {
-  //    display: flex;
-  //    flex: 0 0 auto;
-  //    width: 320px;
-  //    min-width: 320px;
-  //    max-width: 320px;
-  //
-  //    @include media-breakpoint('lt-lg') {
-  //      flex: 1 0 100%;
-  //      margin-top: 32px;
-  //      width: 100%;
-  //      min-width: 0;
-  //      max-width: none;
-  //    }
-  //
-  //    .fuse-card {
-  //
-  //      @include media-breakpoint('lt-lg') {
-  //        width: 100%;
-  //        min-width: 0;
-  //        max-width: none;
-  //      }
-  //    }
-  //  }
-}
+  }
 
-.recent-transactions {
-  overflow-y: auto;
-}
-
-mat-toolbar-row {
-
-  background-color: #5CB85C;
-  color: #FFF;
-  border-radius: 3px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  cursor: default;
-  padding-top: 11px;
-  padding-right: 16px;
-  padding-bottom: 10px;
-  padding-left: 16px;
-  margin-bottom: 20px;
-  white-space: normal;
-  justify-content: space-between;
-  height: fit-content;
-
-  &.warning {
+  .activation-message {
+    align-items: center;
     background: #F0AD4E;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    color: #FFF;
+    cursor: default;
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    justify-content: space-between;
+    margin: 0;
+    padding: 8px 16px;
+    white-space: normal;
+    width: 100%;
 
     button.activate {
       min-width: fit-content;
+      margin: 4px;
     }
-  }
-
-  a {
-    color: #fff;
-    text-decoration: underline;
-
-    &:hover {
-      text-decoration: none;
-    }
-  }
-
-  .spacer {
-    flex: 1 1 auto;
-  }
-
-  mat-icon {
-    padding: 0 35px 0 0;
-  }
-
-  .close {
-    cursor: pointer;
   }
 }
-
