feat: New Market Info Widget

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -48,6 +48,7 @@
         <div class="fuse-card ml-8">
           <div class="h3 secondary-text ">{{ 'market_info' | i18n }}</div>
           <app-market-overview></app-market-overview>
+          <small class="font-size-10 secondary-text text-right">Information by {{marketServiceName()}}</small>
         </div>
       </mat-grid-tile>
     </mat-grid-list>
