--- a/web/angular-wallet/src/app/main/dashboard/market/market-overview.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/market/market-overview.component.html
@@ -1,61 +1,76 @@
 <ng-container *ngIf="isLoading">
   <div class="skeleton-loader">
-    <ngx-skeleton-loader count="1" [theme]="{height: '32px', 'margin-top':'1rem'}"></ngx-skeleton-loader>
-    <ngx-skeleton-loader count="5"></ngx-skeleton-loader>
+    <ngx-skeleton-loader count="3" [theme]="{height: '32px', 'margin-top':'1rem'}"></ngx-skeleton-loader>
   </div>
 </ng-container>
 
 <ng-container *ngIf="!isLoading">
   <mat-list>
-    <mat-list-item>
-      <div matLine fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
-        <h3 class="font-weight-700">
-          {{"price" | i18n}} SATS
-        </h3>
-        <div>
-          {{getPriceSats()}}
+    <mat-list-item class="mb-10 mt-12">
+      <div matLine fxLayout="column" fxLayoutAlign="space-between left">
+        <small class="mb-2 secondary-text font-size-12">
+          {{"price" | i18n}}
+        </small>
+        <div fxLayout="row" fxLayoutAlign="space-between center" class="w-100-p">
+          <div class="font-weight-800 font-size-18">
+            <small class="font-size-14">SATS&nbsp;</small>{{getPriceSats()}}
+          </div>
+          <div>
+            {{getPriceUsd()}}
+          </div>
+          <div>
+            {{getPriceEur()}}
+          </div>
         </div>
+        <small class="secondary-text font-size-10"
+               fxLayout="row"
+               fxLayoutAlign="flex-end center"
+        >
+          <span class="mr-4">{{ 'yesterdays_change' | i18n}}</span>
+          <span [ngClass]="{fg_green: !isChangeNegative(), fg_red: isChangeNegative()}">
+            {{getYesterDaysChange()}}
+          </span>
+          <mat-icon *ngIf="!isChangeNegative()" class="fg_green">arrow_drop_up</mat-icon>
+          <mat-icon *ngIf="isChangeNegative()" class="fg_red">arrow_drop_down</mat-icon>
+        </small>
       </div>
     </mat-list-item>
-    <mat-list-item>
-      <div matLine fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
-        <h3 class="font-weight-700">
-          {{"price" | i18n}} USD
-        </h3>
-        <div>
-          {{getPriceUsd()}}
-        </div>
-      </div>
-    </mat-list-item>
-    <mat-list-item>
-      <div matLine fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
-        <h3 class="font-weight-700">
+    <mat-list-item class="mb-16">
+      <div matLine fxLayout="column" fxLayoutAlign="space-between left">
+        <small class="mb-2 secondary-text font-size-12">
           {{"volume_24h" | i18n}}
-        </h3>
-        <div>
-          {{get24hVolume()}}
+        </small>
+        <div fxLayout="row" fxLayoutAlign="space-between center" class="w-100-p">
+          <div>
+            {{get24hVolumeBtc()}}
+          </div>
+          <div>
+            {{get24hVolumeUsd()}}
+          </div>
+          <div>
+            {{get24hVolumeEur()}}
+          </div>
         </div>
       </div>
     </mat-list-item>
-    <mat-list-item>
-      <div matLine fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
-        <h3 class="font-weight-700">
+    <mat-list-item class="mb-16">
+      <div matLine fxLayout="column" fxLayoutAlign="space-between left">
+        <small class="mb-2 secondary-text font-size-12">
           {{"market_capitalization" | i18n}}
-        </h3>
-        <div>
-          {{getMarketCap()}}
-        </div>
-      </div>
-    </mat-list-item>
-    <mat-list-item>
-      <div matLine fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
-        <h3 class="font-weight-700">
-          {{"yesterdays_change" | i18n}}
-        </h3>
-        <div [ngClass]="{fg_green: !isChangeNegative(), fg_red: isChangeNegative()}">
-          {{getYesterDaysChange()}}
+        </small>
+        <div fxLayout="row" fxLayoutAlign="space-between center" class="w-100-p">
+          <div>
+            {{getMarketCapBtc()}}
+          </div>
+          <div>
+            {{getMarketCapUsd()}}
+          </div>
+          <div>
+            {{getMarketCapEur()}}
+          </div>
         </div>
       </div>
     </mat-list-item>
   </mat-list>
+
 </ng-container>
