chore: More translations

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
       </mat-grid-tile>
       <mat-grid-tile [colspan]="gridAttributes.columnSpans.performance" [rowspan]="gridAttributes.rowSpans.performance">
         <div class="fuse-card ml-8">
-          <div class="h3 secondary-text mb-8">Coin Performance</div>
+          <div class="h3 secondary-text mb-8">{{ 'coin_performance' | i18n }}</div>
           <app-performance></app-performance>
         </div>
       </mat-grid-tile>
