fix: correct link to fee types

--- a/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
@@ -2,7 +2,7 @@
   <div class="__info">
     <label class="pill">{{'suggested_fee' | i18n}}</label>
     <a class="--help"
-       href="https://burst-apps-team.github.io/burst-wiki/en/transaction-and-fee-types/#fee-types"
+       href="https://burstwiki.org/en/transaction-and-fee-types/#fee-types"
        target="_blank"
        matTooltip="{{'click_here_for_help' | i18n}}"
     >
