style(dashboard): fix overlap, add welcome message instead of empty chart for new users

--- a/web/angular-wallet/src/app/main/dashboard/balance-chart/balance-chart.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/balance-chart/balance-chart.component.scss
@@ -16,3 +16,14 @@
     }
   }
 }
+
+.no-transactions {
+  text-align:center; 
+  display: flex; 
+  height: 59%;
+}
+
+.align-center {
+  align-self: center; 
+  flex: 1;
+}
