--- a/web/angular-wallet/src/app/main/dashboard/balance-chart/balance-chart.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/balance-chart/balance-chart.component.html
@@ -9,17 +9,22 @@
           <small class="pl-8 font-size-14">{{calculateValue(priceEur) | currency:'EUR'}}</small>
         </div>
       </div>
-      <div class="position-relative">
-        <canvas baseChart
-                chartType="line"
-                [datasets]="chart.datasets"
-                [labels]="chart.labels"
-                [colors]="chart.colors"
-                [options]="chart.options"
-        >
-        </canvas>
+      <div *ngIf="account.transactions.length">
+        <div class="position-relative">
+          <canvas baseChart
+            chartType="line"
+            [datasets]="chart.datasets"
+            [labels]="chart.labels"
+            [colors]="chart.colors"
+            [options]="chart.options"
+          >
+          </canvas>
+        </div>
+        <small class="pl-16">{{"recent_transactions_since" | i18n}}&nbsp;{{firstDate}}</small>
       </div>
-      <small class="pl-16">{{"recent_transactions_since" | i18n}}&nbsp;{{firstDate}}</small>
+      <div class="no-transactions" *ngIf="!account.transactions.length">
+        <h1 class="align-center">{{"dashboard_welcome_title" | i18n}}</h1>
+      </div>
     </div>
   </div>
 </div>
