feat: corrected some of the inconsistent nqt x burst namings, and set standard fee

--- a/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
+++ b/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
@@ -46,7 +46,7 @@
           <div class="fee-hint"
                fuseMatSidenavToggler="message-right-sidenav"
                matTooltip="{{'fee' | i18n}}"
-          >{{feeNQT}}</div>
+          >{{feeBurst}}</div>
         </div>
       </div>
 
