fix(assets): improve asset formatting

--- a/web/angular-wallet/src/app/main/assets/assets.component.html
+++ b/web/angular-wallet/src/app/main/assets/assets.component.html
@@ -27,7 +27,7 @@
     <ng-container matColumnDef="amount">
       <mat-header-cell *matHeaderCellDef>{{ 'balance' | i18n }}</mat-header-cell>
       <mat-cell *matCellDef="let asset">
-        <span>{{ asset.amount }}</span>
+        <span>{{ asset.amount | assetAmount: asset.decimals }}</span>
       </mat-cell>
     </ng-container>
 
