feat: messing around with routing...still buggy

--- a/web/angular-wallet/src/app/startup/repair/repair.component.html
+++ b/web/angular-wallet/src/app/startup/repair/repair.component.html
@@ -6,6 +6,7 @@
       </div>
       <div class="title">Repair</div>
       <app-settings-form [settings]="settings"></app-settings-form>
+      <button mat-raised-button color="accent" (click)="apply()" >{{'next' | i18n }}</button>
     </div>
   </div>
 </div>
